--- a/components/_sidebar.ejs
+++ b/components/_sidebar.ejs
@@ -31,9 +31,9 @@
 						<a href="./deptInfoPhd.html" class="list-group-item list-group-item-action <%= isActive('deptInfoPhd') %> sub">博士班</a>
 						<a href="#" class="list-group-item list-group-item-action category">名額分配</a>
 						<a href="./quotaDistributionBache.html" class="list-group-item list-group-item-action <%= isActive('quotaDistributionBache') %> sub">學士班</a>
-						<a href="#" class="list-group-item list-group-item-action <%= isActive('') %> sub">港二技</a>
-						<a href="#" class="list-group-item list-group-item-action <%= isActive('') %> sub">碩士班</a>
-						<a href="#" class="list-group-item list-group-item-action <%= isActive('') %> sub">博士班</a>
+						<a href="./quotaDistributionTwoYear.html" class="list-group-item list-group-item-action <%= isActive('quotaDistributionTwoYear') %> sub">港二技</a>
+						<a href="./quotaDistributionMaster.html" class="list-group-item list-group-item-action <%= isActive('quotaDistributionMaster') %> sub">碩士班</a>
+						<a href="./quotaDistributionPhd.html" class="list-group-item list-group-item-action <%= isActive('quotaDistributionPhd') %> sub">博士班</a>
 						<a href="./account.html" class="list-group-item list-group-item-action <%= isActive('account') %>">帳號管理</a>
 					</div>
 				</div>
