--- a/components/_sidebar.ejs
+++ b/components/_sidebar.ejs
@@ -3,6 +3,9 @@
 		return current.source == page ? 'active' : '';
 	}
 %>
+<script>
+	User.checkLogin('school_editor');
+</script>
 <div class="row">
 	<button id="btn-toggle" class="btn btn-sm btn-secondary">
 		<i class="fa fa-bars" aria-hidden="true"></i>
@@ -42,8 +45,8 @@
 			<div class="row">
 				<div class="col-md-12">
 					<h5>帳號資訊</h5>
-					<div id="userSchool">國立暨南國際大學</div>
-					<div id="userName">吳富悅</div><br />
+					<div id="userSchool"><!-- 國立暨南國際大學 --></div>
+					<div id="userName"><!-- 吳富悅 --></div><br />
 					<button id="btn-editAccount" class="btn btn-secondary btn-block">編輯</button>
 					<button id="btn-logout" class="btn btn-secondary btn-block">登出</button>
 				</div>
