dynamic page title

--- a/components/_quotaDistribution.ejs
+++ b/components/_quotaDistribution.ejs
@@ -2,7 +2,7 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/bootstrap-sortable/2.0.0/bootstrap-sortable.min.css">
 <div class="row">
 	<div class="col-12">
-		<h3 class="float-left">學士班名額分配</h3>
+		<h3 class="float-left"><%= system %>名額分配</h3>
 		<span id="badge-status" class="badge badge-success">已確認</span>
 		<span class='float-right'>
 			上次編輯：吳和融<br />03月15日 18:56:23 (2017)
