get qouta via api; set quota status badge

--- a/components/_quotaDistribution.ejs
+++ b/components/_quotaDistribution.ejs
@@ -3,7 +3,7 @@
 <div class="row">
 	<div class="col-12">
 		<h3 class="float-left"><%= system %>名額分配</h3>
-		<span id="badge-status" class="badge badge-success">已確認</span>
+		<span id="badge-status" class="badge"></span>
 		<span class='float-right'>
 			上次編輯：吳和融<br />03月15日 18:56:23 (2017)
 		</span>
