算一下數學(系所名額總量)

--- a/components/_quotaDistribution.ejs
+++ b/components/_quotaDistribution.ejs
@@ -148,8 +148,8 @@
 						<div>歷史學系</div>
 						<div>history</div>
 					</td>
-					<td><input type="number" class="form-control editableQuota required" /></td>
-					<td><input type="number" class="form-control editableQuota required" /></td>
+					<td><input type="number" class="form-control editableQuota required admission_selection_quota" /></td>
+					<td><input type="number" class="form-control editableQuota required admission_placement_quota" /></td>
 					<td class="text-center"><input type="checkbox" class="isSelf"></td>
 					<td><input type="number" class="form-control editableQuota required self_enrollment_quota" /></td>
 					<td class="total">12</td>
