--- a/components/_quotaDistribution.ejs
+++ b/components/_quotaDistribution.ejs
@@ -141,7 +141,7 @@
 				</tr>
 			</thead>
 			<tbody>
-				<tr class="dept">
+				<!-- <tr class="dept">
 					<td>0</td>
 					<td>5HW01</td>
 					<td>
@@ -153,7 +153,7 @@
 					<td class="text-center"><input type="checkbox" class="isSelf"></td>
 					<td><input type="number" class="form-control editableQuota required self_enrollment_quota" /></td>
 					<td class="total">12</td>
-				</tr>
+				</tr> -->
 			</tbody>
 		</table>
 	</div>
