--- a/components/_quotaDistribution.ejs
+++ b/components/_quotaDistribution.ejs
@@ -133,10 +133,10 @@
 					<th>#</th>
 					<th>代碼</th>
 					<th>名稱</th>
-					<th>個人申請人數</th>
-					<th>聯合分發人數</th>
+					<th style="width: 150px;">個人申請人數</th>
+					<th style="width: 150px;">聯合分發人數</th>
 					<th>是否自招</th>
-					<th>自招人數</th>
+					<th style="width: 150px;">自招人數</th>
 					<th>系所總量</th>
 				</tr>
 			</thead>
