--- a/components/_quotaDistribution.ejs
+++ b/components/_quotaDistribution.ejs
@@ -81,7 +81,7 @@
 	<div class="col-1">
 		<div class="form-group">
 			<small id="" class="form-text text-muted">學士班聯合分發</small>
-			<input type="text" class="form-control bg-info">
+			<input type="text" class="form-control bg-info" disabled>
 		</div>
 	</div>
 	<span class="operator">＋</span>
