算算個人申請總和 高鐵 wifi commit 首發

--- a/components/_quotaDistribution.ejs
+++ b/components/_quotaDistribution.ejs
@@ -73,8 +73,8 @@
 	<span class="operator">＝</span>
 	<div class="col-1">
 		<div class="form-group">
-			<small id="" class="form-text text-muted">學士班個人申請</small>
-			<input type="text" class="form-control bg-info" disabled>
+			<small class="form-text text-muted">學士班個人申請</small>
+			<input type="text" class="form-control bg-info quota admission_selection_quota" disabled>
 		</div>
 	</div>
 	<span class="operator">＋</span>
