填入數值; 計算本年度可招生總量

--- a/components/_quotaDistribution.ejs
+++ b/components/_quotaDistribution.ejs
@@ -14,28 +14,28 @@
 	<div class="col-3">
 		<div class="form-group">
 			<small id="" class="form-text text-muted">本年度可招生總量</small>
-			<input type="text" class="form-control" disabled>
+			<input type="text" class="form-control allowTotal quota" disabled>
 		</div>
 	</div>
 	<span class="operator">＝</span>
 	<div class="col-2">
 		<div class="form-group">
 			<small id="" class="form-text text-muted">去年招生名額 * 10%</small>
-			<input type="text" class="form-control" disabled>
+			<input type="text" class="form-control last_year_admission_amount quota" disabled>
 		</div>
 	</div>
 	<span class="operator">＋</span>
 	<div class="col-2">
 		<div class="form-group">
 			<small id="" class="form-text text-danger">去年本地生招生缺額數*</small>
-			<input type="text" class="form-control">
+			<input type="text" class="form-control last_year_surplus_admission_quota quota">
 		</div>
 	</div>
 	<span class="operator">＋</span>
 	<div class="col-2">
 		<div class="form-group">
 			<small id="" class="form-text text-muted">本年度教育部核准擴增名額</small>
-			<input type="text" class="form-control" disabled>
+			<input type="text" class="form-control ratify_expanded_quota quota" disabled>
 		</div>
 	</div>
 </div>
