save & commit schoolInfo data. Text 部分可以 save & commit。 電子檔部分還沒有做。

--- a/schoolInfo.ejs
+++ b/schoolInfo.ejs
@@ -211,10 +211,10 @@
 	</div>
 	<div class="row">
 		<div class="col-6">
-			<button class="btn btn-primary btn-block">儲存</button>
+			<button id="btn-save" type="button" class="btn btn-primary btn-block">儲存</button>
 		</div>
 		<div class="col-6">
-			<button class="btn btn-danger btn-block">送出</button>
+			<button id="btn-commit" type="button" class="btn btn-danger btn-block">送出</button>
 		</div>
 	</div>
 </form>
