--- a/components/_quotaDistribution.ejs
+++ b/components/_quotaDistribution.ejs
@@ -81,7 +81,7 @@
 	<div class="col-1">
 		<div class="form-group">
 			<small id="" class="form-text text-muted">學士班聯合分發</small>
-			<input type="text" class="form-control bg-info" disabled>
+			<input type="text" class="form-control bg-info quota admission_placement_quota" disabled>
 		</div>
 	</div>
 	<span class="operator">＋</span>
@@ -95,7 +95,7 @@
 	<div class="col-1">
 		<div class="form-group">
 			<small id="" class="form-text text-muted">學士班自招</small>
-			<input type="text" class="form-control bg-success" disabled>
+			<input type="text" class="form-control bg-success quota self_enrollment_quota" disabled>
 		</div>
 	</div>
 	<span class="operator">＋</span>
