--- a/schoolInfo.ejs
+++ b/schoolInfo.ejs
@@ -174,6 +174,11 @@
 							<input id="ruleDocOfFiveYearStudent" type="file" class="form-control">
 						</div>
 					</div>
+					<div class="row">
+						<div class="form-group col-12">
+							<a id="ruleDocOfFiveYearStudentUrl" href=""></a>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -203,6 +208,11 @@
 						<div class="form-group col-12">
 							<label for="">自招核定公文電子檔</label>
 							<input id="approvalDocOfSelfEnrollment" type="file" class="form-control">
+						</div>
+					</div>
+					<div class="row">
+						<div class="form-group col-12">
+							<a id="approvalDocOfSelfEnrollmentUrl" href=""></a>
 						</div>
 					</div>
 				</div>
