計算「本年度欲招募總量」

--- a/components/_quotaDistribution.ejs
+++ b/components/_quotaDistribution.ejs
@@ -67,7 +67,7 @@
 	<div class="col-3">
 		<div class="form-group">
 			<small id="" class="form-text text-muted">本年度欲招募總量</small>
-			<input type="text" class="form-control" disabled>
+			<input type="text" class="form-control quota wantTotal" disabled>
 		</div>
 	</div>
 	<span class="operator">＝</span>
@@ -112,14 +112,14 @@
 	<div class="col-3 offset-3">
 		<div class="form-group">
 			<small id="" class="form-text text-muted">本年度聯招小計</small>
-			<input type="text" class="form-control bg-info" disabled>
+			<input type="text" class="form-control bg-info quota admissionSum" disabled>
 		</div>
 	</div>
 	<span>　　　</span>
 	<div class="col-2">
 		<div class="form-group">
 			<small id="" class="form-text text-muted">本年度自招小計</small>
-			<input type="text" class="form-control bg-success" disabled>
+			<input type="text" class="form-control bg-success quota selfSum" disabled>
 		</div>
 	</div>
 </div>
