--- a/components/_quotaDistribution.ejs
+++ b/components/_quotaDistribution.ejs
@@ -28,7 +28,7 @@
 	<div class="col-2">
 		<div class="form-group">
 			<small id="" class="form-text text-danger">去年本地生招生缺額數*</small>
-			<input type="number" min="0" class="form-control last_year_surplus_admission_quota quota">
+			<input type="number" min="0" class="form-control last_year_surplus_admission_quota quota requried">
 		</div>
 	</div>
 	<span class="operator">＋</span>
@@ -148,10 +148,10 @@
 						<div>歷史學系</div>
 						<div>history</div>
 					</td>
-					<td><input type="number" class="form-control editableQuota required admission_selection_quota" /></td>
-					<td><input type="number" class="form-control editableQuota required admission_placement_quota" /></td>
-					<td class="text-center"><input type="checkbox" class="isSelf"></td>
-					<td><input type="number" class="form-control editableQuota required self_enrollment_quota" /></td>
+					<td><input type="number" min="0" class="form-control editableQuota required admission_selection_quota" data-type="admission_selection_quota" value="0" /></td>
+					<td><input type="number" min="0" class="form-control editableQuota required admission_placement_quota" data-type="admission_placement_quota" value="0" /></td>
+					<td class="text-center"><input type="checkbox" class="isSelf" checked="ture" ></td>
+					<td><input type="number" min="0" class="form-control editableQuota required self_enrollment_quota" data-type="self_enrollment_quota" value="0" /></td>
 					<td class="total">12</td>
 				</tr> -->
 			</tbody>
@@ -191,10 +191,10 @@
 </div>
 <div class="row">
 	<div class="col-12 text-center">
-		<button class="btn btn-success">
+		<button id="btn-save" data-action="save" class="btn btn-success">
 			儲存
 		</button>
-		<button class="btn btn-primary">
+		<button id="btn-commit" data-action="commit" class="btn btn-primary">
 			送出
 		</button>
 	</div>
