var 一下; 顯示使用者身份

--- a/components/_sidebar.ejs
+++ b/components/_sidebar.ejs
@@ -49,7 +49,10 @@
 			<hr />
 			<div class="row">
 				<div class="col-md-12">
-					<h5>帳號資訊</h5>
+					<div>
+						<h5 class="d-inline">帳號資訊</h5>
+						<span id="badge-role" class="badge badge-warning float-right"><!-- 管理員 --></span>
+					</div>
 					<div id="userSchool"><!-- 國立暨南國際大學 --></div>
 					<div id="userName"><!-- 吳富悅 --></div><br />
 					<button id="btn-editAccount" class="btn btn-secondary btn-block">編輯</button>
