fix api url; 顯示聯合分發人數參考值

--- a/components/_quotaDistribution.ejs
+++ b/components/_quotaDistribution.ejs
@@ -135,9 +135,10 @@
 					<th>名稱</th>
 					<th style="width: 150px;">個人申請人數</th>
 					<th style="width: 150px;">聯合分發人數</th>
-					<th>是否自招</th>
-					<th style="width: 150px;">自招人數</th>
-					<th>系所總量</th>
+					<th style="width: 100px;">參考值 <i class="fa fa-question-circle" aria-hidden="true" data-toggle="tooltip" data-placement="top" data-animation="false" title="聯合分發人數不得低於參考值"></i></th>
+					<th style="width: 100px;">是否自招</th>
+					<th style="width: 100px;">自招人數</th>
+					<th style="width: 100px;">系所總量</th>
 				</tr>
 			</thead>
 			<tbody>
