--- a/components/_quotaDistribution.ejs
+++ b/components/_quotaDistribution.ejs
@@ -136,6 +136,7 @@
 					<th style="width: 150px;">個人申請人數</th>
 					<th style="width: 150px;">聯合分發人數</th>
 					<th style="width: 100px;">參考值 <i class="fa fa-question-circle" aria-hidden="true" data-toggle="tooltip" data-placement="top" data-animation="false" title="聯合分發人數不得低於參考值"></i></th>
+					<th style="width: 150px;">減招原因</th>
 					<th style="width: 100px;">是否自招</th>
 					<th style="width: 100px;">自招人數</th>
 					<th style="width: 100px;">系所總量</th>
@@ -151,9 +152,11 @@
 					</td>
 					<td><input type="number" min="0" class="form-control editableQuota required admission_selection_quota" data-type="admission_selection_quota" value="0" /></td>
 					<td><input type="number" min="0" class="form-control editableQuota required admission_placement_quota" data-type="admission_placement_quota" value="0" /></td>
+					<td class="reference text-center">0</td>
+					<td><textarea class="form-control decrease_reason_of_admission_placement" cols="50" rows="1" disabled="true"></textarea></td>
 					<td class="text-center"><input type="checkbox" class="isSelf" checked="ture" ></td>
 					<td><input type="number" min="0" class="form-control editableQuota required self_enrollment_quota" data-type="self_enrollment_quota" value="0" /></td>
-					<td class="total">12</td>
+					<td class="total text-center">12</td>
 				</tr> -->
 			</tbody>
 		</table>
