顯示減招原因no邏輯

--- a/components/_quotaDistribution.ejs
+++ b/components/_quotaDistribution.ejs
@@ -152,7 +152,7 @@
 					</td>
 					<td><input type="number" min="0" class="form-control editableQuota required admission_selection_quota" data-type="admission_selection_quota" value="0" /></td>
 					<td><input type="number" min="0" class="form-control editableQuota required admission_placement_quota" data-type="admission_placement_quota" value="0" /></td>
-					<td class="reference text-center">0</td>
+					<td class="reference text-center" data-val="">0</td>
 					<td><textarea class="form-control decrease_reason_of_admission_placement" cols="50" rows="1" disabled="true"></textarea></td>
 					<td class="text-center"><input type="checkbox" class="isSelf" checked="ture" ></td>
 					<td><input type="number" min="0" class="form-control editableQuota required self_enrollment_quota" data-type="self_enrollment_quota" value="0" /></td>
