--- a/components/_quotaDistribution.ejs
+++ b/components/_quotaDistribution.ejs
@@ -28,7 +28,7 @@
 	<div class="col-2">
 		<div class="form-group">
 			<small id="" class="form-text text-danger">去年本地生招生缺額數*</small>
-			<input type="number" min="0" class="form-control last_year_surplus_admission_quota quota requried">
+			<input type="number" min="0" class="form-control last_year_surplus_admission_quota quota required">
 		</div>
 	</div>
 	<span class="operator">＋</span>
