--- a/components/_quotaDistribution.ejs
+++ b/components/_quotaDistribution.ejs
@@ -10,6 +10,23 @@
 	</div>
 </div>
 <hr />
+<div class="row mb-5 hide" id="reviewInfo">
+	<div class="col-12">
+		<div class="card">
+			<h3 class="card-header bg-warning text-white">審閱建議</h3>
+			<div class="card-block">
+				<h4 class="card-title">
+					<div class="input-group" style="width: 200px">
+						<span class="input-group-addon"><i class="fa fa-user" aria-hidden="true"></i></span>
+						<input id="reviewBy" type="text" class="form-control" value="YuerLeee" disabled>
+					</div>
+				</h4>
+				<small id="reviewAt" class="form-text text-muted"></small>
+				<p id="reviewMemo" class="card-text">Very good!</p>
+			</div>
+		</div>
+	</div>
+</div>
 <div class="row">
 	<div class="col-3">
 		<div class="form-group">
