--- a/components/_sidebar.ejs
+++ b/components/_sidebar.ejs
@@ -32,12 +32,12 @@
 					<div id="menu" class="list-group">
 						<a href="./index.html" class="list-group-item list-group-item-action <%= isActive('index') %>">最新消息</a>
 						<a href="./schoolInfo.html" class="list-group-item list-group-item-action <%= isActive('schoolInfo') %>">學校資料</a>
-						<a href="#" class="list-group-item list-group-item-action category">系所資料</a>
+						<a href="#" class="list-group-item list-group-item-action category">系所資料&nbsp;&nbsp;<small><i class="fa fa-chevron-down" aria-hidden="true"></i></small></a>
 						<a href="./deptInfoBache.html" class="list-group-item list-group-item-action <%= isActive('deptInfoBache') %> sub">學士班</a>
 						<a href="./deptInfoTwoYear.html" class="list-group-item list-group-item-action <%= isActive('deptInfoTwoYear') %> sub">港二技</a>
 						<a href="./deptInfoMaster.html" class="list-group-item list-group-item-action <%= isActive('deptInfoMaster') %> sub">碩士班</a>
 						<a href="./deptInfoPhd.html" class="list-group-item list-group-item-action <%= isActive('deptInfoPhd') %> sub">博士班</a>
-						<a href="#" class="list-group-item list-group-item-action category">名額分配</a>
+						<a href="#" class="list-group-item list-group-item-action category">名額分配&nbsp;&nbsp;<small><i class="fa fa-chevron-down" aria-hidden="true"></i></small></a>
 						<a href="./quotaDistributionBache.html" class="list-group-item list-group-item-action <%= isActive('quotaDistributionBache') %> sub">學士班</a>
 						<a href="./quotaDistributionTwoYear.html" class="list-group-item list-group-item-action <%= isActive('quotaDistributionTwoYear') %> sub">港二技</a>
 						<a href="./quotaDistributionMaster.html" class="list-group-item list-group-item-action <%= isActive('quotaDistributionMaster') %> sub">碩士班</a>
