--- a/components/_quotaDistribution.ejs
+++ b/components/_quotaDistribution.ejs
@@ -179,8 +179,39 @@
 		</table>
 	</div>
 </div>
-<!-- 碩博二only -->
-<div class="row mt-5 masterOnly phdOnly twoYearOnly hide">
+<!-- 港二技only -->
+<div class="row mt-5 twoYearOnly hide">
+	<div class="col-12">
+		<h3>系所列表</h3>
+		<table id="dept-list" class="table table-hover sortable">
+			<thead>
+				<tr>
+					<th>#</th>
+					<th>代碼</th>
+					<th>名稱</th>
+					<th>聯招人數</th>
+					<th>自招人數</th>
+					<th>系所總量</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<td>0</td>
+					<td>5HW01</td>
+					<td>
+						<div>歷史學系</div>
+						<div>history</div>
+					</td>
+					<td>4</td>
+					<td>5</td>
+					<td>9</td>
+				</tr>
+			</tbody>
+		</table>
+	</div>
+</div>
+<!-- 碩博only -->
+<div class="row mt-5 masterOnly phdOnly hide">
 	<div class="col-12">
 		<h3>系所列表</h3>
 		<table id="dept-list" class="table table-hover sortable">
