--- a/css/quotaDistribution.css
+++ b/css/quotaDistribution.css
@@ -1,6 +1,13 @@
-.bacheOnly.hide, 
-.twoYearOnly.hide,
-.masterOnly.hide, 
-.phdOnly.hide {
-	display: none;
+#badge-status {
+	vertical-align: sub;
+	margin-left: 10px;
+	padding-left: 10px;
+	padding-right: 10px;
+}
+
+.operator {
+	line-height: 77px;
+	text-align: center;
+	font-size: 16px;
+	font-weight: bold;
 }
