--- a/components/_quotaDistribution.ejs
+++ b/components/_quotaDistribution.ejs
@@ -61,21 +61,21 @@
 	<div class="col-3">
 		<div class="form-group">
 			<small id="" class="form-text text-muted">本年度欲招募總量</small>
-			<input type="text" class="form-control" disabled>
+			<input type="text" class="form-control quota wantTotal" disabled>
 		</div>
 	</div>
 	<span class="operator">＝</span>
 	<div class="col-2">
 		<div class="form-group">
 			<small id="" class="form-text text-muted">本年度聯招小計</small>
-			<input type="text" class="form-control" disabled>
+			<input type="text" class="form-control admissionSum quota" disabled>
 		</div>
 	</div>
 	<span class="operator">＋</span>
 	<div class="col-2">
 		<div class="form-group">
 			<small id="" class="form-text text-muted">本年度自招小計</small>
-			<input type="text" class="form-control" disabled>
+			<input type="text" class="form-control selfSum quota" disabled>
 		</div>
 	</div>
 </div>
@@ -214,29 +214,29 @@
 <div class="row mt-5 masterOnly phdOnly hide">
 	<div class="col-12">
 		<h3>系所列表</h3>
-		<table id="dept-list" class="table table-hover sortable">
+		<table id="table-masterPhdDeptList" class="table table-hover sortable">
 			<thead>
 				<tr>
 					<th>#</th>
 					<th>代碼</th>
 					<th>名稱</th>
-					<th>聯招人數</th>
-					<th>自招人數</th>
-					<th>系所總量</th>
+					<th style="width: 150px">個人申請人數</th>
+					<th style="width: 150px">自招人數</th>
+					<th style="width: 150px" class="text-center">系所總量</th>
 				</tr>
 			</thead>
 			<tbody>
-				<tr>
-					<td>0</td>
-					<td>5HW01</td>
+				<!-- <tr class="dept" data-id="${id}">
+					<td>${sort_order}</td>
+					<td>${id}</td>
 					<td>
-						<div>歷史學系</div>
-						<div>history</div>
+						<div>${title}</div>
+						<small>${eng_title}</small>
 					</td>
-					<td>4</td>
-					<td>5</td>
-					<td>9</td>
-				</tr>
+					<td><input type="number" class="form-control editableQuota required admission_selection_quota" value="${admission_selection_quota}" /></td>
+					<td><input type="number" class="form-control editableQuota required self_enrollment_quota" value="${self_enrollment_quota}" /></td>
+					<td class="total text-center">${total}</td>
+				</tr> -->
 			</tbody>
 		</table>
 	</div>
