勾選是否自招&運算邏輯

--- a/components/_quotaDistribution.ejs
+++ b/components/_quotaDistribution.ejs
@@ -221,6 +221,7 @@
 					<th>代碼</th>
 					<th>名稱</th>
 					<th style="width: 150px">個人申請人數</th>
+					<th style="width: 100px;">是否自招</th>
 					<th style="width: 150px">自招人數</th>
 					<th style="width: 150px" class="text-center">系所總量</th>
 				</tr>
