--- a/components/_deptInfo.ejs
+++ b/components/_deptInfo.ejs
@@ -16,10 +16,10 @@
 	</div>
 	<div class="row">
 		<div class="col-6">
-			<button id="btn-deptInfoSave" type="button" class="btn btn-primary btn-block">儲存</button>
+			<button id="btn-deptInfoSave" data-action="save" type="button" class="btn btn-primary btn-block">儲存</button>
 		</div>
 		<div class="col-6">
-			<button id="btn-deptInfocommit" type="button" class="btn btn-danger btn-block">送出</button>
+			<button id="btn-deptInfoCommit" data-action="commit" type="button" class="btn btn-danger btn-block">送出</button>
 		</div>
 	</div>
 </form>
