--- a/components/_quotaDistribution.ejs
+++ b/components/_quotaDistribution.ejs
@@ -105,7 +105,7 @@
 	<div class="col-1">
 		<div class="form-group">
 			<small id="" class="form-text text-muted">港二技個人申請</small>
-			<input type="text" class="form-control bg-info" disabled>
+			<input type="text" class="form-control bg-info quota another_department_admission_selection_quota" disabled>
 		</div>
 	</div>
 	<span class="operator">＋</span>
@@ -119,7 +119,7 @@
 	<div class="col-1">
 		<div class="form-group">
 			<small id="" class="form-text text-muted">港二技自招</small>
-			<input type="text" class="form-control bg-success" disabled>
+			<input type="text" class="form-control bg-success quota another_department_self_enrollment_quota" disabled>
 		</div>
 	</div>
 </div>
