填入名額數據@港二技名額分配

--- a/components/_quotaDistribution.ejs
+++ b/components/_quotaDistribution.ejs
@@ -79,8 +79,8 @@
 		</div>
 	</div>
 </div>
-<!-- 學二only -->
-<div class="row bacheOnly twoYearOnly hide">
+<!-- 學only -->
+<div class="row bacheOnly hide">
 	<div class="col-3">
 		<div class="form-group">
 			<small id="" class="form-text text-muted">本年度欲招募總量</small>
@@ -120,6 +120,50 @@
 		<div class="form-group">
 			<small id="" class="form-text text-muted">港二技自招</small>
 			<input type="text" class="form-control bg-success quota another_department_self_enrollment_quota" disabled>
+		</div>
+	</div>
+</div>
+<!-- 二only -->
+<div class="row bacheOnly twoYearOnly hide">
+	<div class="col-3">
+		<div class="form-group">
+			<small id="" class="form-text text-muted">本年度欲招募總量</small>
+			<input type="text" class="form-control quota wantTotal" disabled>
+		</div>
+	</div>
+	<span class="operator">＝</span>
+	<div class="col-1">
+		<div class="form-group">
+			<small class="form-text text-muted">學士班個人申請</small>
+			<input type="text" class="form-control bg-info quota another_department_admission_selection_quota" disabled>
+		</div>
+	</div>
+	<span class="operator">＋</span>
+	<div class="col-1">
+		<div class="form-group">
+			<small id="" class="form-text text-muted">學士班聯合分發</small>
+			<input type="text" class="form-control bg-info quota another_department_admission_placement_quota" disabled>
+		</div>
+	</div>
+	<span class="operator">＋</span>
+	<div class="col-1">
+		<div class="form-group">
+			<small id="" class="form-text text-muted">港二技個人申請</small>
+			<input type="text" class="form-control bg-info quota admission_selection_quota" disabled>
+		</div>
+	</div>
+	<span class="operator">＋</span>
+	<div class="col-1">
+		<div class="form-group">
+			<small id="" class="form-text text-muted">學士班自招</small>
+			<input type="text" class="form-control bg-success quota another_department_self_enrollment_quota" disabled>
+		</div>
+	</div>
+	<span class="operator">＋</span>
+	<div class="col-1">
+		<div class="form-group">
+			<small id="" class="form-text text-muted">港二技自招</small>
+			<input type="text" class="form-control bg-success quota self_enrollment_quota" disabled>
 		</div>
 	</div>
 </div>
