fix wrong class; update status after committing

--- a/components/_quotaDistribution.ejs
+++ b/components/_quotaDistribution.ejs
@@ -124,7 +124,7 @@
 	</div>
 </div>
 <!-- 二only -->
-<div class="row bacheOnly twoYearOnly hide">
+<div class="row twoYearOnly hide">
 	<div class="col-3">
 		<div class="form-group">
 			<small id="" class="form-text text-muted">本年度欲招募總量</small>
