在檔案部份加個"已上傳檔案"字樣

--- a/schoolInfo.ejs
+++ b/schoolInfo.ejs
@@ -176,7 +176,7 @@
 					</div>
 					<div class="row">
 						<div class="form-group col-12">
-							<a id="ruleDocOfFiveYearStudentUrl" href=""></a>
+							已上傳檔案：<a id="ruleDocOfFiveYearStudentUrl" href=""></a>
 						</div>
 					</div>
 				</div>
@@ -212,7 +212,7 @@
 					</div>
 					<div class="row">
 						<div class="form-group col-12">
-							<a id="approvalDocOfSelfEnrollmentUrl" href=""></a>
+							已上傳檔案：<a id="approvalDocOfSelfEnrollmentUrl" href=""></a>
 						</div>
 					</div>
 				</div>
