--- a/login.ejs
+++ b/login.ejs
@@ -2,7 +2,7 @@
 	<nav class="navbar navbar-light">
 		<span class="navbar-brand" href="#">
 			<img
-			src="http://www.overseas.ncnu.edu.tw/film/images/logo2014.png"
+			src="/img/logo.png"
 			height="30"
 			class="d-inline-block align-top">
 			簡章調查系統
