schoolInfo form validate.

--- a/schoolInfo.ejs
+++ b/schoolInfo.ejs
@@ -34,44 +34,44 @@
 		</div>
 	</div>
 	<div class="row">
-		<div class="form-group col-6">
-			<label for="">學校電話號碼*</label>
+		<div id="phoneForm" class="form-group col-6">
+			<label class="form-control-label" for="">學校電話號碼*</label>
 			<input id="phone" type="text" class="form-control">
 		</div>
-		<div class="form-group col-6">
-			<label for="">學校傳真號碼*</label>
+		<div id="faxForm" class="form-group col-6">
+			<label class="form-control-label" for="">學校傳真號碼*</label>
 			<input id="fax" type="text" class="form-control">
 		</div>
 	</div>
 	<div class="row">
-		<div class="form-group col-6">
-			<label for="">學校中文網址*</label>
+		<div id="urlForm" class="form-group col-6">
+			<label class="form-control-label" for="">學校中文網址*</label>
 			<input id="url" type="text" class="form-control">
 		</div>
-		<div class="form-group col-6">
-			<label for="">學校英文網址*</label>
+		<div id="engUrlForm" class="form-group col-6">
+			<label class="form-control-label" for="">學校英文網址*</label>
 			<input id="engUrl" type="text" class="form-control">
 		</div>
 	</div>
 	<div class="row">
-		<div class="form-group col-12">
-			<label for="">學校中文地址*</label>
+		<div id="addressForm" class="form-group col-12">
+			<label class="form-control-label" for="">學校中文地址*</label>
 			<input id="address" type="text" class="form-control">
 		</div>
 	</div>
 	<div class="row">
-		<div class="form-group col-12">
-			<label for="">學校英文地址*</label>
+		<div id="engAddressForm" class="form-group col-12">
+			<label class="form-control-label" for="">學校英文地址*</label>
 			<input id="engAddress" type="text" class="form-control">
 		</div>
 	</div>
 	<div class="row">
-		<div class="form-group col-6">
-			<label for="">承辦單位中文名稱*</label>
+		<div id="organizationForm" class="form-group col-6">
+			<label class="form-control-label" for="">承辦單位中文名稱*</label>
 			<input id="organization" type="text" class="form-control">
 		</div>
-		<div class="form-group col-6">
-			<label for="">承辦單位英文名稱*</label>
+		<div id="engOrganizationForm" class="form-group col-6">
+			<label class="form-control-label" for="">承辦單位英文名稱*</label>
 			<input id="engOrganization" type="text" class="form-control">
 		</div>
 	</div>
@@ -92,14 +92,14 @@
 						</div>
 					</div>
 					<div class="row">
-						<div class="form-group col-12">
-							<label for="">宿舍中文說明</label>
+						<div id="dormInfoForm" class="form-group col-12">
+							<label class="form-control-label" for="">宿舍中文說明</label>
 							<input id="dormInfo" type="text" class="form-control">
 						</div>
 					</div>
 					<div class="row">
-						<div class="form-group col-12">
-							<label for="">宿舍英文說明</label>
+						<div id="dormEngInfoForm" class="form-group col-12">
+							<label class="form-control-label" for="">宿舍英文說明</label>
 							<input id="dormEngInfo" type="text" class="form-control">
 						</div>
 					</div>
@@ -124,22 +124,22 @@
 						</div>
 					</div>
 					<div class="row">
-						<div class="form-group col-6">
-							<label for="">獎學金負責單位中文名稱</label>
+						<div id="scholarshipDeptForm" class="form-group col-6">
+							<label class="form-control-label" for="">獎學金負責單位中文名稱</label>
 							<input id="scholarshipDept" type="text" class="form-control">
 						</div>
-						<div class="form-group col-6">
-							<label for="">獎學金負責單位英文名稱</label>
+						<div id="engScholarshipDeptForm" class="form-group col-6">
+							<label class="form-control-label" for="">獎學金負責單位英文名稱</label>
 							<input id="engScholarshipDept" type="text" class="form-control">
 						</div>
 					</div>
 					<div class="row">
-						<div class="form-group col-6">
-							<label for="">僑生專屬獎學金中文說明網址</label>
+						<div id="scholarshipUrlForm" class="form-group col-6">
+							<label class="form-control-label" for="">僑生專屬獎學金中文說明網址</label>
 							<input id="scholarshipUrl" type="text" class="form-control">
 						</div>
-						<div class="form-group col-6">
-							<label for="">僑生專屬獎學金英文說明網址</label>
+						<div id="engScholarshipUrlForm" class="form-group col-6">
+							<label class="form-control-label" for="">僑生專屬獎學金英文說明網址</label>
 							<input id="engScholarshipUrl" type="text" class="form-control">
 						</div>
 					</div>
@@ -163,8 +163,8 @@
 						</div>
 					</div>
 					<div class="row">
-						<div class="form-group col-12">
-							<label for="">學則*</label>
+						<div id="ruleOfFiveYearStudentForm" class="form-group col-12">
+							<label class="form-control-label" for="">學則*</label>
 							<textarea id="ruleOfFiveYearStudent" type="text" class="form-control" rows="3"></textarea>
 						</div>
 					</div>
@@ -199,8 +199,8 @@
 						</div>
 					</div>
 					<div class="row">
-						<div class="form-group col-12">
-							<label for="">自招核定文號</label>
+						<div id="approvalNoOfSelfEnrollmentForm" class="form-group col-12">
+							<label class="form-control-label" for="">自招核定文號</label>
 							<input id="approvalNoOfSelfEnrollment" type="text" class="form-control">
 						</div>
 					</div>
