港二技名額分配 動態計算總額

--- a/components/_quotaDistribution.ejs
+++ b/components/_quotaDistribution.ejs
@@ -239,18 +239,18 @@
 				</tr>
 			</thead>
 			<tbody>
-				<tr>
-					<td>0</td>
-					<td>5HW01</td>
+				<!-- <tr class="dept" data-id="${id}">
+					<td>${sort_order}</td>
+					<td>${id}</td>
 					<td>
-						<div>歷史學系</div>
-						<div>history</div>
+						<div>${title}</div>
+						<small>${eng_title}</small>
 					</td>
-					<td>4</td>
-					<td><input type="checkbox"></td>
-					<td>5</td>
-					<td>9</td>
-				</tr>
+					<td><input type="number" min="0" class="form-control editableQuota required admission_selection_quota" data-type="admission_selection_quota" value="${+admission_selection_quota}" /></td>
+					<td class="text-center"><span class="isSelf" data-type="self_enrollment_quota">${has_self_enrollment ? '是' : '否'}</span></td>
+					<td><input type="number" min="0" class="form-control editableQuota ${has_self_enrollment ? 'required' : ''} self_enrollment_quota" data-type="self_enrollment_quota" value="${+self_enrollment_quota}" disabled="${has_self_enrollment}" /></td>
+					<td class="total text-center">${total}</td>
+				</tr> -->
 			</tbody>
 		</table>
 	</div>
