[Solved] 除了英文校名、英文系名之外的「英文」欄位都不必必填。

--- a/schoolInfo.ejs
+++ b/schoolInfo.ejs
@@ -49,7 +49,7 @@
 			<input id="url" type="text" class="form-control">
 		</div>
 		<div id="engUrlForm" class="form-group col-6">
-			<label class="form-control-label" for="">學校英文網址*</label>
+			<label class="form-control-label" for="">學校英文網址</label>
 			<input id="engUrl" type="text" class="form-control">
 		</div>
 	</div>
@@ -61,7 +61,7 @@
 	</div>
 	<div class="row">
 		<div id="engAddressForm" class="form-group col-12">
-			<label class="form-control-label" for="">學校英文地址*</label>
+			<label class="form-control-label" for="">學校英文地址</label>
 			<input id="engAddress" type="text" class="form-control">
 		</div>
 	</div>
@@ -71,7 +71,7 @@
 			<input id="organization" type="text" class="form-control">
 		</div>
 		<div id="engOrganizationForm" class="form-group col-6">
-			<label class="form-control-label" for="">承辦單位英文名稱*</label>
+			<label class="form-control-label" for="">承辦單位英文名稱</label>
 			<input id="engOrganization" type="text" class="form-control">
 		</div>
 	</div>
@@ -93,7 +93,7 @@
 					</div>
 					<div class="row">
 						<div id="dormInfoForm" class="form-group col-12">
-							<label class="form-control-label" for="">宿舍中文說明</label>
+							<label class="form-control-label" for="">宿舍中文說明*</label>
 							<input id="dormInfo" type="text" class="form-control">
 						</div>
 					</div>
@@ -125,7 +125,7 @@
 					</div>
 					<div class="row">
 						<div id="scholarshipDeptForm" class="form-group col-6">
-							<label class="form-control-label" for="">獎學金負責單位中文名稱</label>
+							<label class="form-control-label" for="">獎學金負責單位中文名稱*</label>
 							<input id="scholarshipDept" type="text" class="form-control">
 						</div>
 						<div id="engScholarshipDeptForm" class="form-group col-6">
@@ -135,7 +135,7 @@
 					</div>
 					<div class="row">
 						<div id="scholarshipUrlForm" class="form-group col-6">
-							<label class="form-control-label" for="">僑生專屬獎學金中文說明網址</label>
+							<label class="form-control-label" for="">僑生專屬獎學金中文說明網址*</label>
 							<input id="scholarshipUrl" type="text" class="form-control">
 						</div>
 						<div id="engScholarshipUrlForm" class="form-group col-6">
@@ -200,7 +200,7 @@
 					</div>
 					<div class="row">
 						<div id="approvalNoOfSelfEnrollmentForm" class="form-group col-12">
-							<label class="form-control-label" for="">自招核定文號</label>
+							<label class="form-control-label" for="">自招核定文號*</label>
 							<input id="approvalNoOfSelfEnrollment" type="text" class="form-control">
 						</div>
 					</div>
