--- a/components/_quotaDistribution.ejs
+++ b/components/_quotaDistribution.ejs
@@ -4,8 +4,8 @@
 	<div class="col-12">
 		<h3 class="float-left"><%= system %>名額分配</h3>
 		<span id="badge-status" class="badge"></span>
-		<span class='float-right'>
-			上次編輯：吳和融<br />03月15日 18:56:23 (2017)
+		<span id="lastEditionInfo" class='float-right'>
+			上次編輯：<span class="who"></span><br /><span class="when"></span>
 		</span>
 	</div>
 </div>
