名額分配顯示校是否自招

--- a/components/_quotaDistribution.ejs
+++ b/components/_quotaDistribution.ejs
@@ -184,6 +184,11 @@
 		</div>
 	</div>
 </div>
+<div class="row mt-2">
+	<div class="col-12">
+		<h5 class="d-inline">校自招與否：<span id="schoolHasSelf" class="text-danger"></span></h5>
+	</div>
+</div>
 <!-- 學士only -->
 <div class="row mt-5 bacheOnly hide">
 	<div class="col-12">
