名額分配填入審閱意見資料

--- a/components/_quotaDistribution.ejs
+++ b/components/_quotaDistribution.ejs
@@ -18,11 +18,11 @@
 				<h4 class="card-title">
 					<div class="input-group" style="width: 200px">
 						<span class="input-group-addon"><i class="fa fa-user" aria-hidden="true"></i></span>
-						<input id="reviewBy" type="text" class="form-control" value="YuerLeee" disabled>
+						<input id="reviewBy" type="text" class="form-control" disabled>
 					</div>
 				</h4>
 				<small id="reviewAt" class="form-text text-muted"></small>
-				<p id="reviewMemo" class="card-text">Very good!</p>
+				<p id="reviewMemo" class="card-text"></p>
 			</div>
 		</div>
 	</div>
