提示「是否自招」與「自招人數」要到系所資料裡去修改

--- a/components/_quotaDistribution.ejs
+++ b/components/_quotaDistribution.ejs
@@ -186,7 +186,8 @@
 </div>
 <div class="row mt-2">
 	<div class="col-12">
-		<h5 class="d-inline">校自招與否：<span id="schoolHasSelf" class="text-danger"></span></h5>
+		<h5>校自招與否：<span id="schoolHasSelf" class="text-danger"></span></h5>
+		<h6 class="text-danger twoYearOnly hide">*系所「是否自招」與「自招人數」要到系所資料裡去修改</h6>
 	</div>
 </div>
 <!-- 學士only -->
