--- a/components/_quotaDistribution.ejs
+++ b/components/_quotaDistribution.ejs
@@ -295,10 +295,10 @@
 </div>
 <div class="row">
 	<div class="col-12 text-center">
-		<button id="btn-save" data-action="save" class="btn btn-success">
+		<button id="btn-save" data-action="save" class="btn btn-primary">
 			儲存
 		</button>
-		<button id="btn-commit" data-action="commit" class="btn btn-primary">
+		<button id="btn-commit" data-action="commit" class="btn btn-danger">
 			送出
 		</button>
 	</div>
