--- a/index.ejs
+++ b/index.ejs
@@ -1,44 +1,230 @@
-<div class="row">
-	<div class="col-lg-8 offset-lg-2">
-		<div class="card">
-			<div class="card-header">
-				最新消息
-			</div>
-			<ul class="list-group list-group-flush">
-				<li class="list-group-item">Cras justo odio</li>
-				<li class="list-group-item">Dapibus ac facilisis in</li>
-				<li class="list-group-item">Vestibulum at eros</li>
-				<li class="list-group-item">Cras justo odio</li>
-				<li class="list-group-item">Dapibus ac facilisis in</li>
-				<li class="list-group-item">Vestibulum at eros</li>
-				<li class="list-group-item">Cras justo odio</li>
-				<li class="list-group-item">Dapibus ac facilisis in</li>
-				<li class="list-group-item">Vestibulum at eros</li>
-			</ul>
+<div id="reviewInfo">
+	<div class="card">
+		<h3 class="card-header bg-warning text-white">審閱建議</h3>
+		<div class="card-block">
+			<h4 class="card-title">
+				<div class="input-group" style="width: 200px">
+					<span class="input-group-addon"><i class="fa fa-user" aria-hidden="true"></i></span>
+					<input id="reviewBy" type="text" class="form-control" disabled>
+				</div>
+			</h4>
+			<small id="reviewAt" class="form-text text-muted"></small>
+			<p id="reviewMemo" class="card-text"></p>
 		</div>
 	</div>
+	<hr>
 </div>
-<br />
-<div class="row">
-	<div class="col-12">
-		<nav aria-label="Page navigation example">
-			<ul class="pagination justify-content-center">
-				<li class="page-item">
-					<a class="page-link" href="#" aria-label="Previous">
-						<span aria-hidden="true">&laquo;</span>
-						<span class="sr-only">Previous</span>
-					</a>
-				</li>
-				<li class="page-item active"><a class="page-link" href="#">1</a></li>
-				<li class="page-item"><a class="page-link" href="#">2</a></li>
-				<li class="page-item"><a class="page-link" href="#">3</a></li>
-				<li class="page-item">
-					<a class="page-link" href="#" aria-label="Next">
-						<span aria-hidden="true">&raquo;</span>
-						<span class="sr-only">Next</span>
-					</a>
-				</li>
-			</ul>
-		</nav>
+<form id="form-schoolInfo">
+	<div class="row">
+		<div class="form-group col-6">
+			<div class="input-group">
+				<span class="input-group-addon">學校代碼</span>
+				<input type="text" id="schoolId" class="form-control" disabled>
+			</div>
+		</div>
 	</div>
-</div>
+	<div class="row">
+		<div class="form-group col-6">
+			<label for="">學校中文名稱</label>
+			<input id="title" type="text" class="form-control" disabled>
+		</div>
+		<div class="form-group col-6">
+			<label for="">學校英文名稱</label>
+			<input id="engTitle" type="text" class="form-control" disabled>
+		</div>
+	</div>
+	<div class="row">
+		<div id="phoneForm" class="form-group col-6">
+			<label class="form-control-label" for="">學校電話號碼*</label>
+			<input id="phone" type="text" class="form-control">
+		</div>
+		<div id="faxForm" class="form-group col-6">
+			<label class="form-control-label" for="">學校傳真號碼*</label>
+			<input id="fax" type="text" class="form-control">
+		</div>
+	</div>
+	<div class="row">
+		<div id="urlForm" class="form-group col-6">
+			<label class="form-control-label" for="">學校中文網址*</label>
+			<input id="url" type="text" class="form-control">
+		</div>
+		<div id="engUrlForm" class="form-group col-6">
+			<label class="form-control-label" for="">學校英文網址</label>
+			<input id="engUrl" type="text" class="form-control">
+		</div>
+	</div>
+	<div class="row">
+		<div id="addressForm" class="form-group col-12">
+			<label class="form-control-label" for="">學校中文地址*</label>
+			<input id="address" type="text" class="form-control">
+		</div>
+	</div>
+	<div class="row">
+		<div id="engAddressForm" class="form-group col-12">
+			<label class="form-control-label" for="">學校英文地址</label>
+			<input id="engAddress" type="text" class="form-control">
+		</div>
+	</div>
+	<div class="row">
+		<div id="organizationForm" class="form-group col-6">
+			<label class="form-control-label" for="">承辦單位中文名稱*</label>
+			<input id="organization" type="text" class="form-control">
+		</div>
+		<div id="engOrganizationForm" class="form-group col-6">
+			<label class="form-control-label" for="">承辦單位英文名稱</label>
+			<input id="engOrganization" type="text" class="form-control">
+		</div>
+	</div>
+
+	<div class="row">
+		<div class="form-group col-12">
+			<div class="card">
+				<div class="card-header bg-primary text-white">
+					宿舍
+				</div>
+				<div class="card-block">
+					<div class="row">
+						<div class="form-group col-6">
+							<div class="input-group">
+								<span class="input-group-addon"><input id="hasDorm" type="checkbox"></span>
+								<input type="text" class="form-control" value="是否提供宿舍*" disabled>
+							</div>
+						</div>
+					</div>
+					<div class="row">
+						<div id="dormInfoForm" class="form-group col-12">
+							<label class="form-control-label" for="">宿舍中文說明*</label>
+							<input id="dormInfo" type="text" class="form-control">
+						</div>
+					</div>
+					<div class="row">
+						<div id="dormEngInfoForm" class="form-group col-12">
+							<label class="form-control-label" for="">宿舍英文說明</label>
+							<input id="dormEngInfo" type="text" class="form-control">
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="row">
+		<div class="form-group col-12">
+			<div class="card">
+				<div class="card-header bg-primary text-white">
+					僑生專屬獎學金
+				</div>
+				<div class="card-block">
+					<div class="row">
+						<div class="form-group col-6">
+							<div class="input-group">
+								<span class="input-group-addon"><input id="hasScholarship" type="checkbox"></span>
+								<input type="text" class="form-control" value="是否提供僑生專屬獎學金*" disabled>
+							</div>
+						</div>
+					</div>
+					<div class="row">
+						<div id="scholarshipDeptForm" class="form-group col-6">
+							<label class="form-control-label" for="">獎學金負責單位中文名稱*</label>
+							<input id="scholarshipDept" type="text" class="form-control">
+						</div>
+						<div id="engScholarshipDeptForm" class="form-group col-6">
+							<label class="form-control-label" for="">獎學金負責單位英文名稱</label>
+							<input id="engScholarshipDept" type="text" class="form-control">
+						</div>
+					</div>
+					<div class="row">
+						<div id="scholarshipUrlForm" class="form-group col-6">
+							<label class="form-control-label" for="">僑生專屬獎學金中文說明網址*</label>
+							<input id="scholarshipUrl" type="text" class="form-control">
+						</div>
+						<div id="engScholarshipUrlForm" class="form-group col-6">
+							<label class="form-control-label" for="">僑生專屬獎學金英文說明網址</label>
+							<input id="engScholarshipUrl" type="text" class="form-control">
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="row">
+		<div class="form-group col-12">
+			<div class="card">
+				<div class="card-header bg-primary text-white">
+					中五生招收
+				</div>
+				<div class="card-block">
+					<div class="row">
+						<div class="form-group col-6">
+							<div class="input-group">
+								<span class="input-group-addon"><input id="hasFiveYearStudentAllowed" type="checkbox"></span>
+								<input type="text" class="form-control" value="是否招收中五生*" disabled>
+							</div>
+						</div>
+					</div>
+					<div class="row">
+						<div id="ruleOfFiveYearStudentForm" class="form-group col-12">
+							<label class="form-control-label" for="">學則*</label>
+							<textarea id="ruleOfFiveYearStudent" type="text" class="form-control" rows="3"></textarea>
+						</div>
+					</div>
+					<div class="row">
+						<div class="form-group col-12">
+							<label for="">學則文件電子檔</label>
+							<input id="ruleDocOfFiveYearStudent" type="file" class="form-control">
+						</div>
+					</div>
+					<div class="row">
+						<div class="form-group col-12">
+							已上傳檔案：<a id="ruleDocOfFiveYearStudentUrl" href=""></a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="row">
+		<div class="form-group col-12">
+			<div class="card">
+				<div class="card-header bg-primary text-white">
+					單獨招收僑生（自招）
+				</div>
+				<div class="card-block">
+					<div class="row">
+						<div class="form-group col-6">
+							<div class="input-group">
+								<span class="input-group-addon"><input id="hasSelfEnrollment" type="checkbox"></span>
+								<input type="text" class="form-control" value="是否單獨招收僑生（自招）*" disabled>
+							</div>
+						</div>
+					</div>
+					<div class="row">
+						<div id="approvalNoOfSelfEnrollmentForm" class="form-group col-12">
+							<label class="form-control-label" for="">自招核定文號*</label>
+							<input id="approvalNoOfSelfEnrollment" type="text" class="form-control">
+						</div>
+					</div>
+					<div class="row">
+						<div class="form-group col-12">
+							<label for="">自招核定公文電子檔</label>
+							<input id="approvalDocOfSelfEnrollment" type="file" class="form-control">
+						</div>
+					</div>
+					<div class="row">
+						<div class="form-group col-12">
+							已上傳檔案：<a id="approvalDocOfSelfEnrollmentUrl" href=""></a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-6">
+			<button id="btn-save" data-action="save" type="button" class="btn btn-primary btn-block">儲存</button>
+		</div>
+		<div class="col-6">
+			<button id="btn-commit" data-action="commit" type="button" class="btn btn-danger btn-block">送出</button>
+		</div>
+	</div>
+</form>
